<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_bg"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/splash_logo_login"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/splash" />
    <TextView
        android:id="@+id/app_name_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/splash_logo_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/app_name2"
        android:textColor="@color/white"
        android:fontFamily="@font/r_bold"
        android:textSize="30sp"
        />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_btn"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_marginTop="220sp"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="212dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/login_mbahgugel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background=""
            android:contentDescription="@string/app_name2"
            android:textAlignment="center"
            app:srcCompat="@drawable/google" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/r_medium"
            android:text="@string/login"
            android:textSize="14sp" />

    </LinearLayout>

    <!--    <com.google.android.gms.common.SignInButton-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/app_name_login"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginTop="45dp"-->
<!--        android:text="@string/login"-->
<!--        android:layout_marginRight="5dp">-->

<!--        <ImageView-->
<!--            android:layout_width="16dp"-->
<!--            android:layout_height="16dp"-->
<!--            android:layout_gravity="center_vertical"-->
<!--            android:layout_marginLeft="12dp"-->
<!--            app:srcCompat="@drawable/google"/>-->
<!--    </com.google.android.gms.common.SignInButton>-->



</androidx.constraintlayout.widget.ConstraintLayout>